Sat Sep  9 23:29:17 2000  Christopher Faylor <cgf@cygnus.com>

	* path.cc (chdir): Use the full path for cwd_win32.  Consider attempts
	to chdir to strings of dots > 2 to be an error.  Pass 'dir' argument to
	cygcwd.set.
	(cwdstuff::set): Need to treat arguments from chdir differently.
	* path.h (cwdstuff): Add an argument to set.

Fri Sep  8 11:50:09 2000  Christopher Faylor <cgf@cygnus.com>

	* lib/_cygwin_crt0_common.cc: Add missing header files.

Thu Sep  7 23:07:21 2000  Christopher Faylor <cgf@cygnus.com>

	* sigproc.h (sigframe::set): Eliminate second argument.  Default bp to
	current frame pointer rather than using this within the function, which
	is unstable when this method is not inlined.
	* net.cc: Eliminate use of second argument to sigframe.set throughout.
	* select.cc (cygwin_select): Ditto.
	* sigproc.cc (sig_send): Ditto.

Thu Sep  7 22:45:16 2000  Christopher Faylor <cgf@cygnus.com>

	Break out more header info into separate files.  Use appropriate
	header files throughout.
	* shared.h: Remove.
	* cygwin_version.h: New file.
	* delqueue.h: New file.
	* environ.h: New file.
	* host_dependent.h: New file.
	* perprocess.h: New file.
	* registry.h: New file.
	* security.h: New file.

Thu Sep  7 12:14:43 2000  Christopher Faylor <cgf@cygnus.com>

	Split out tty and shared_info stuff into their own headers and use
	throughout.  Include sys/termios.h for files which need it.
	* tty.h: New file.
	* shared_info.h: New file.
	* fhandler.h: Move inline methods that rely on tty stuff to
	fhandler_console.cc.
	* fhandler_tty.cc (fhandler_pty_master::process_slave_output): Set
	output_done_event immediately after reading data to speed up tty output
	processing.
	(process_output): Set write_error to errno or zero.
	(fhandler_tty_slave::write): Check previous write error prior to
	writing to slave end of pipe.  This allows tty output to be slightly
	less synchronous.
	* fhandler_console.cc (fhandler_console::tcsetpgrp): Moved here from
	fhandler.h.